Rearrange MainWindowUI Buttons. Connect Signal-Slot of Keyboard Buttons.

--- a/SimpleCalculator/SimpleCalculator.vcxproj
+++ b/SimpleCalculator/SimpleCalculator.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="ExpressionBase.cpp" />
     <ClCompile Include="ExpressionSymbol.cpp" />
     <ClCompile Include="HorizontalExpression.cpp" />
+    <ClCompile Include="MainWindowData.cpp" />
     <ClCompile Include="ReversePolishNotation.cpp" />
     <ClCompile Include="KeyboardButton.cpp" />
     <ClCompile Include="main.cpp" />
@@ -119,8 +120,14 @@
     <ClInclude Include="ExpressionBase.h" />
     <ClInclude Include="ExpressionSymbol.h" />
     <ClInclude Include="HorizontalExpression.h" />
+    <ClInclude Include="MainWindowData.h" />
     <ClInclude Include="ReversePolishNotation.h" />
-    <ClInclude Include="KeyboardButton.h" />
+    <QtMoc Include="KeyboardButton.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="MainWindowUI.h" />
     <ClInclude Include="ExpressionRect.h" />
   </ItemGroup>
