--- a/SimpleCalculator/SimpleCalculator.vcxproj
+++ b/SimpleCalculator/SimpleCalculator.vcxproj
@@ -60,7 +60,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -99,6 +99,7 @@
   <ItemGroup>
     <ClCompile Include="ArithmeticPanel.cpp" />
     <ClCompile Include="Const.cpp" />
+    <ClCompile Include="EnumConvert.cpp" />
     <ClCompile Include="Enums.h" />
     <ClCompile Include="ExpressionBase.cpp" />
     <ClCompile Include="ExpressionElement.cpp" />
@@ -117,6 +118,7 @@
   <ItemGroup>
     <ClInclude Include="ArithmeticPanel.h" />
     <ClInclude Include="Const.h" />
+    <ClInclude Include="EnumConvert.h" />
     <ClInclude Include="ExpressionBase.h" />
     <ClInclude Include="ExpressionElement.h" />
     <ClInclude Include="HorizontalExpression.h" />
