--- a/SimpleCalculator/SimpleCalculator.vcxproj.filters
+++ b/SimpleCalculator/SimpleCalculator.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="ResultPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ComputeResult.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MainWindow.h">
@@ -142,6 +145,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Singleton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ComputeResult.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
