add mouse click support; add tan expression; add mouse scroll support; add settings support; add about window; add menu bar

--- a/SimpleCalculator/SimpleCalculator.vcxproj
+++ b/SimpleCalculator/SimpleCalculator.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="FractionExpression.cpp" />
     <ClCompile Include="HorizontalExpression.cpp" />
     <ClCompile Include="GlobalMgr.cpp" />
+    <ClCompile Include="ProgramSettings.cpp" />
     <ClCompile Include="ResultPanel.cpp" />
     <ClCompile Include="ReversePolishNotation.cpp" />
     <ClCompile Include="KeyboardButton.cpp" />
@@ -118,6 +119,7 @@
     <ClCompile Include="ExpressionRect.cpp" />
     <ClCompile Include="FuncExpression.cpp" />
     <ClCompile Include="SinExpression.cpp" />
+    <ClCompile Include="TanExpression.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="VerticalExpressionBase.cpp" />
     <ClCompile Include="VisualMgr.cpp" />
@@ -148,11 +150,13 @@
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
       <Define Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
     </QtMoc>
+    <ClInclude Include="ProgramSettings.h" />
     <ClInclude Include="ReversePolishNotation.h" />
     <ClInclude Include="FuncExpression.h" />
     <ClInclude Include="SimpleFuncExpression.h" />
     <ClInclude Include="SinExpression.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="TanExpression.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="ValidateResult.h" />
     <ClInclude Include="VerticalExpressionBase.h" />
